@@ -6,43 +6,106 @@ import io.yak.framework.security.common.po.RolePermissionPO;
 import io.yak.framework.security.dao.RolePermissionDao;
 import io.yak.framework.security.dao.mapper.RolePermissionMapper;
 import io.yak.framework.security.util.CopyBeanUtil;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
-import org.springframework.stereotype.Component;
-import org.springframework.util.CollectionUtils;
+import io.yak.framework.security.util.DatabaseNumberUtils;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Repository;
 
-@Component
-public class RolePermissionDaoImpl extends BaseDaoImpl<RolePermissionPO> implements RolePermissionDao {
+import java.util.List;
+
+/**
+ * 角色权限关联数据访问实现。
+ *
+ * @author weifuwan
+ */
+@Repository
+@RequiredArgsConstructor
+public class RolePermissionDaoImpl
+        implements RolePermissionDao {
+
   private final RolePermissionMapper rolePermissionMapper;
 
-  public RolePermissionDaoImpl(RolePermissionMapper rolePermissionMapper) {
-    this.rolePermissionMapper = rolePermissionMapper;
-  }
-
+  /**
+   * 批量新增角色权限关联。
+   *
+   * <p>当前采用循环插入方式，适用于角色权限数量较少的场景。</p>
+   *
+   * @param items 角色权限关联列表
+   */
   @Override
   public void insertBatch(List<RolePermission> items) {
-    if (CollectionUtils.isEmpty(items)) return;
-    CopyBeanUtil.copyList(items, RolePermissionPO.class).forEach(rolePermissionMapper::insert);
+    if (items == null || items.isEmpty()) {
+      return;
+    }
+
+    CopyBeanUtil.copyList(
+            items,
+            RolePermissionPO.class
+    )
+            .forEach(rolePermissionMapper::insert);
   }
 
+  /**
+   * 删除指定角色的全部权限关联。
+   *
+   * @param roleId 角色标识
+   */
   @Override
   public void deleteByRoleId(Long roleId) {
-    if (roleId != null) rolePermissionMapper.delete(Wrappers.<RolePermissionPO>lambdaQuery()
-        .eq(RolePermissionPO::getRoleId, roleId));
+    if (roleId == null) {
+      return;
+    }
+
+    rolePermissionMapper.delete(
+            Wrappers.<RolePermissionPO>lambdaQuery()
+                    .eq(RolePermissionPO::getRoleId, roleId)
+    );
   }
 
+  /**
+   * 查询指定角色关联的权限标识。
+   *
+   * @param roleId 角色标识
+   * @return 权限标识列表
+   */
   @Override
-  public List<Long> selectPermissionIdListByRoleId(Long roleId) {
-    return roleId == null ? Collections.emptyList()
-        : selectPermissionIdListByRoleIdList(Collections.singletonList(roleId));
+  public List<Long> selectPermissionIdListByRoleId(
+          Long roleId) {
+
+    if (roleId == null) {
+      return List.of();
+    }
+
+    return selectPermissionIdListByRoleIdList(
+            List.of(roleId)
+    );
   }
 
+  /**
+   * 查询多个角色关联的权限标识。
+   *
+   * @param roleIds 角色标识列表
+   * @return 权限标识列表
+   */
   @Override
-  public List<Long> selectPermissionIdListByRoleIdList(List<Long> roleIds) {
-    if (CollectionUtils.isEmpty(roleIds)) return Collections.emptyList();
-    return rolePermissionMapper.selectObjs(Wrappers.<RolePermissionPO>lambdaQuery()
-        .select(RolePermissionPO::getPermissionId).in(RolePermissionPO::getRoleId, roleIds))
-        .stream().map(id -> ((Number) id).longValue()).collect(Collectors.toList());
+  public List<Long> selectPermissionIdListByRoleIdList(
+          List<Long> roleIds) {
+
+    if (roleIds == null || roleIds.isEmpty()) {
+      return List.of();
+    }
+
+    return rolePermissionMapper.selectObjs(
+            Wrappers.<RolePermissionPO>lambdaQuery()
+                    .select(
+                            RolePermissionPO::getPermissionId
+                    )
+                    .in(
+                            RolePermissionPO::getRoleId,
+                            roleIds
+                    )
+    )
+            .stream()
+            .map(DatabaseNumberUtils::toLong)
+            .toList();
   }
 }
